# Neural_Network_Cpp

./: CMakeLists.txt  Matrix.cpp  Matrix.h  NeuralNetwork.cpp  NeuralNetwork.h  Reader.cpp  Reader.h  Stackmanager.cpp  Stackmanager.h  Utils.cpp  Utils.h  main.cpp
GoogleTest/: CMakeLists.txt  test_matrix.cpp
